fix: better spacing in the create dialog

--- a/styles/module.css
+++ b/styles/module.css
@@ -34,6 +34,10 @@ svg image {
   overflow: auto;
 }
 
+.creationGraph-details .form-fields{
+  margin-top: 1em;
+}
+
 
 .graph-btn.active {
   background-color: #4CAF50; /* green */
